--- a/src/scss/pages/about.scss
+++ b/src/scss/pages/about.scss
@@ -4,13 +4,43 @@
   .about-us-head {
     background-color: $primary-color;
     padding: 2.6rem 0;
-    margin-bottom: 3rem;
+    overflow: hidden;
+    position: relative;
+    z-index: 1;
+
+    .head-container {
+      display: flex;
+      .head-left {
+        width: 50%;
+        padding-left: 140px;
+      }
+      .head-right {
+        width: 50%;
+        img {
+          float: right;
+        }
+      }
+    }
+    .about-us-watermark {
+      background-color: #f82462;
+      height: 195px;
+      opacity: 0.3;
+
+      .theme-big-text {
+        margin: 0;
+        padding: 0 !important;
+        font-size: 13vw !important;
+        color: white;
+        opacity: 0.8;
+        line-height: 0.85;
+      }
+     }
 
     .breadcrumb {
       margin: 0;
       padding-left: 0.5rem;
-      margin-bottom: 4rem;
       color: $white;
+      border: none;
 
       .breadcrumb-item {
         &::before {
@@ -52,7 +82,7 @@
       margin-left: -20px;
     }
 
-    @media(max-width: 676px) {
+    @media(max-width: 767px) {
       .about-cm {
         margin: 0;
         width: 100%;
@@ -63,11 +93,18 @@
   }
 
   .about-us-body {
+    position: relative;
+    margin-top: -90px;
+    z-index: 5;
+    background-color: white;
+
     .team-members {
-      margin-bottom: 4rem;
+      background: #faf8f9;
+      padding-bottom: 124px;
 
       h2.our-team {
         text-align: center;
+        margin-top: 5rem;
         margin-bottom: 3rem;
       }
 
