--- a/src/scss/app/fixed-sidebar.scss
+++ b/src/scss/app/fixed-sidebar.scss
@@ -8,7 +8,7 @@
   align-items: flex-end;
   justify-content: center;
   overflow: visible;
-  z-index: $zindex-fixed;
+  z-index: 1000;
 
 
   @include media-breakpoint-down(sm) {
