--- a/src/scss/pages/about.scss
+++ b/src/scss/pages/about.scss
@@ -61,6 +61,7 @@
 
     h4.intro, p {
       color: $white;
+      font-size: 27px;
 
       .bold {
         font-weight: 700;
@@ -76,6 +77,7 @@
       padding: 0;
       letter-spacing: 1px;
       line-height: 24px;
+      font-size: 16px;
     }
 
     .about-cm {
@@ -102,6 +104,9 @@
       background: #faf8f9;
       padding-bottom: 124px;
 
+      .container {
+        padding-top: 90px;
+      }
       h2.our-team {
         text-align: center;
         margin-top: 5rem;
