home page design upgrade

--- a/src/scss/pages/home.animation.scss
+++ b/src/scss/pages/home.animation.scss
@@ -31,8 +31,7 @@
 
 .animation-element.slide-left.testimonial {
   float: left;
-  margin: 0 10px 20px;
-
+  //margin: 0 10px 20px;
 }
 
 //.animation-element.slide-left.testimonial:nth-of-type(odd) {
