--- a/src/scss/pages/home.scss
+++ b/src/scss/pages/home.scss
@@ -116,6 +116,11 @@
   .home-body {
     padding-top: 35px;
 
+    .container {
+      .row {
+        margin: 20px 0;
+      }
+    }
     .theme-row {
       justify-content: space-between;
 
@@ -162,8 +167,8 @@
 
 .block-el {
   position: relative;
-  padding: 30px;
-  margin: 10px;
+  padding: 0 15px !important;
+  margin: 0 10px !important;
   float: left;
 }
 
@@ -176,53 +181,60 @@
     color: $white;
   }
 
+  .block-bg {
+    background-color: $primary-color;
+    &::before {
+      background-color: $primary-color;
+    }
+  }
+
   button {
     display: block;
     padding: 10px 35px;
   }
 
   #camera {
-    background-image: url('/images/Icons/catogories/1 (12).jpg');
+    background-image: url('/images/Icons/catogories/h11.svg');
   }
 
   #computer_electronic {
-    background-image: url('/images/Icons/catogories/1 (13).jpg');
+    background-image: url('/images/Icons/catogories/h21.svg');
   }
 
   #drones {
-    background-image: url('/images/Icons/catogories/1 (14).jpg');
+    background-image: url('/images/Icons/catogories/h31.svg');
   }
 
   #lenses {
-    background-image: url('/images/Icons/catogories/1 (15).jpg');
+    background-image: url('/images/Icons/catogories/h41.svg');
   }
 
   #lighting {
-    background-image: url('/images/Icons/catogories/1 (16).jpg');
+    background-image: url('/images/Icons/catogories/h51.svg');
   }
 
   #audio {
-    background-image: url('/images/Icons/catogories/1 (17).jpg');
+    background-image: url('/images/Icons/catogories/h61.svg');
   }
 
   #tripods_stabilization_rigs {
-    background-image: url('/images/Icons/catogories/1 (18).jpg');
+    background-image: url('/images/Icons/catogories/h71.svg');
   }
 
   #camera_accessories {
-    background-image: url('/images/Icons/catogories/1 (19).jpg');
+    background-image: url('/images/Icons/catogories/h81.svg');
   }
 
   #studio_spaces {
-    background-image: url('/images/Icons/catogories/1 (20).jpg');
+    background-image: url('/images/Icons/catogories/h91.svg');
   }
 
   #office_spaces {
-    background-image: url('/images/Icons/catogories/1 (21).jpg');
+    background-image: url('/images/Icons/catogories/ha1.svg');
   }
 
   #others {
-    background-image: url('/images/Icons/catogories/1 (22).jpg');
+    background-image: url('/images/Icons/catogories/hb1.svg');
   }
 }
 
@@ -235,10 +247,12 @@
 
   button {
     display: none;
+    padding: 10px 35px;
+    transition: .3s !important;
   }
 
   span {
-    margin-bottom: 1rem;
+    transition: .3s !important;
   }
 
   p {
@@ -248,6 +262,7 @@
     margin: 0;
     background-repeat: no-repeat;
     background-position: center;
+    transition: .3s !important;
   }
 
   div.desc {
@@ -262,51 +277,51 @@
   }
 
   #camera {
-    background-image: url('/images/Icons/catogories/1 (1).jpg');
+    background-image: url('/images/Icons/catogories/h12.svg');
   }
 
   #computer_electronic {
-    background-image: url('/images/Icons/catogories/1 (2).jpg');
+    background-image: url('/images/Icons/catogories/h22.svg');
   }
 
   #drones {
-    background-image: url('/images/Icons/catogories/1 (3).jpg');
+    background-image: url('/images/Icons/catogories/h32.svg');
   }
 
   #lenses {
-    background-image: url('/images/Icons/catogories/1 (4).jpg');
+    background-image: url('/images/Icons/catogories/h42.svg');
   }
 
   #lighting {
-    background-image: url('/images/Icons/catogories/1 (5).jpg');
+    background-image: url('/images/Icons/catogories/h52.svg');
   }
 
   #audio {
-    background-image: url('/images/Icons/catogories/1 (6).jpg');
+    background-image: url('/images/Icons/catogories/h62.svg');
   }
 
   #tripods_stabilization_rigs {
-    background-image: url('/images/Icons/catogories/1 (7).jpg');
+    background-image: url('/images/Icons/catogories/h72.svg');
   }
 
   #camera_accessories {
-    background-image: url('/images/Icons/catogories/1 (8).jpg');
+    background-image: url('/images/Icons/catogories/h82.svg');
   }
 
   #studio_spaces {
-    background-image: url('/images/Icons/catogories/1 (9).jpg');
+    background-image: url('/images/Icons/catogories/h92.svg');
   }
 
   #office_spaces {
-    background-image: url('/images/Icons/catogories/1 (10).jpg');
+    background-image: url('/images/Icons/catogories/ha2.svg');
   }
 
   #others {
-    background-image: url('/images/Icons/catogories/1 (11).jpg');
+    background-image: url('/images/Icons/catogories/hb2.svg');
   }
 }
 
-.block-el > .block-bg {
+.block-el .block-bg {
   position: absolute;
   width: 100%;
   height: 100%;
@@ -314,7 +329,8 @@
   top: 0;
   background-color: $white;
   transform: skewX(-15deg);
-  box-shadow: 2px 2px 17px 0px #eceaea;
+  box-shadow: 2px 2px 17px -2px #eceaea;
+  transition: .3s !important;
 }
 
 .block-el:first-child .block-bg::before {
@@ -324,25 +340,26 @@
   width: 65px;
   height: 210px;
   transform: skewX(15deg) translateX(-35px);
-  background-color: #fff;
 }
 
 .block-el:last-child .block-bg::before {
   content: '';
   position: absolute;
   right: -74px;
-  top: -10px;
+  top: 0;
   z-index: 333;
   width: 65px;
-  height: 210px;
+  height: 200px;
   -webkit-transform: skewX(15deg) translateX(-35px);
   transform: skewX(15deg) translateX(-35px);
-  background-color: #ffff;
 }
 
 .paySection {
   min-height: 600px;
   width: 100%;
+  .pay-section-title {
+    font-size: 40px;
+  }
 }
 
 .calendarSection {
@@ -355,9 +372,11 @@
 .paySection1 {
   display: flex;
   flex-direction: column;
-  align-items: stretch;
+  align-items: center;
   justify-content: flex-start;
   min-height: 600px;
+  text-align: center;
+  padding: 130px 0;
 
   background-image: url('/images/home/faq-bg.jpg');
   background-size: cover;
@@ -457,6 +476,7 @@
         font-size: 20px;
         font-weight: 300;
         letter-spacing: -0.01em;
+
       }
     }
 
@@ -500,6 +520,39 @@
   padding: 0;
   width: 100%;
   height: 721px;
+  background-image: url('/images/home/faq-bg.jpg');
+  background-size: 40% 100%;
+  background-repeat: no-repeat;
+
+  .container {
+    display: flex;
+  }
+  .faq-left {
+    width: 40%;
+    display: flex;
+    align-items: center;
+
+    .faq-form {
+      .arrival-timer-title {
+        margin-bottom: 30px;
+      }
+      .faq-wrapper {
+        div:first-child {
+          margin-bottom: 40px;
+        }
+        span {
+          line-height: 1.9;
+        }
+        button {
+          width: 100%;
+        }
+      }
+    }
+  }
+  .arrival-items {
+    width: 60%;
+    margin-left: 115px;
+  }
 
   .arrival-timer {
     flex-shrink: 0;
@@ -678,7 +731,7 @@
 
           .info-price {
             margin: 0 5px 0 0;
-            font-size: 27px;
+            font-size: 22px;
             font-weight: bolder;
             line-height: 1em;
             color: $white;
