CRT-21, CRT-22, homepage ui fix

--- a/src/scss/components/button.scss
+++ b/src/scss/components/button.scss
@@ -161,9 +161,10 @@
 
 .faq-button {
   width: 189px;
-  height: 50px;
+  height: 45px;
   border: none;
   background-color: #F82462;
+  cursor: pointer;
 
   span {
     color: white;
