--- a/src/scss/common.scss
+++ b/src/scss/common.scss
@@ -34,6 +34,9 @@ button[disabled]{
   color: #666666;
 }
 
+.theme-btn-secondery {
+  border: solid 1px #D3D3D3;
+}
 
 input::-webkit-input-placeholder {
   font-size: 12px;
