--- a/src/scss/pages/payment.scss
+++ b/src/scss/pages/payment.scss
@@ -8,7 +8,7 @@
   }
   .payment-card {
     padding: 15px 20px;
-    width: 54%;
+    width: 64%;
     min-height: 180px;
     box-shadow: 0px 2px 22px -2px rgba(173, 173, 173, 0.2);
     border-radius: 10px;
@@ -50,7 +50,6 @@
     justify-content: space-between;
 
     span {
-      width: 80px;
       display: inline-block;
       padding: 3px 0;
     }
@@ -69,11 +68,15 @@
   }
 
   .payment-card {
-    width: auto;
+    min-width: 250px;
     min-height: 140px !important;
 
     .payment-card-other {
       margin-top: 25px !important;
+      span {
+        color: black;
+        opacity: 0.6;
+      }
     }
   }
 
@@ -112,6 +115,7 @@
     padding-left: 10px;
   }
 }
+
 #select-day {
   width: 45%;
   div div div {
@@ -121,13 +125,16 @@
     border-bottom: solid 1px #EAEAEA !important;
   }
 }
+
 .date-select-container {
   justify-content: space-between;
 }
+
 .payment-card-other {
   justify-content: space-between;
   margin-top: 43px !important;
 }
+
 .card-expiration-date, .card-holder {
   font-family: Helvetica Neue;
   font-size: 12px;
@@ -146,58 +153,97 @@
 }
 
 .paid-item {
-    padding: 30px 0;
-    display: flex;
-    border-bottom: solid 1px #F0F0F0;
-    text-align: left;
+  padding: 30px 0;
+  display: flex;
+  border-bottom: solid 1px #F0F0F0;
+  text-align: left;
 
-    .item-info {
+  .item-info {
+    width: 50%;
+    .type-tabs {
+      margin: 10px 0 20px;
+
+      input {
+        display: none;
+      }
+
+      .type-tab {
+        background-color: #fef1e8;
+        color: #F2C893;
+        font-size: 13px;
+        padding: 3px 18px;
+        border-radius: 0 4px 4px 0;
+
+        &.active {
+          background-color: #1cdb74 !important;
+          color: #FAF5EC;
+          z-index: 1000;
+          border-radius: 4px;
+        }
+        &.type-tab2 {
+          background-color: #f8f1e8;
+          color: #F2C893;
+          z-index: 999;
+        }
+        &.type-tab3 {
+          background-color: #fbe3d9;
+          color: #F5BCA4;
+          z-index: 998;
+        }
+        &.type-tab4 {
+          background-color: #f9dada;
+          color: #F6B3B3;
+          z-index: 997;
+        }
+      }
     }
+  }
 
-    .pay-info {
-      width: 50%;
-      padding-left: 80px;
+  .pay-info {
+    width: 50%;
+    padding-left: 80px;
 
+    & > div {
+      display: flex;
       & > div {
-        display: flex;
-        & > div {
-          width: 50%;
-        }
-      }
-
-      .buyer-profile {
-        display: flex;
-
-        div {
-          margin: -5px 0 0 10px;
-          span {
-            display: block;
-          }
-        }
-        img {
-          width: 36px;
-          height: 36PX;
-        }
+        width: 50%;
       }
     }
 
-    .buyer-info {
-      margin: 30px 0;
-    }
+    .buyer-profile {
+      display: flex;
 
-    .category-name {
-      font-family: Helvetica Neue;
-      font-size: 16px;
-      line-height: 27px;
-      color: #3A3A3A;
-      opacity: 0.3;
+      div {
+        margin: -5px 0 0 10px;
+        span {
+          display: block;
+        }
+      }
+      img {
+        width: 36px;
+        height: 36PX;
+        border-radius: 18px;
+      }
     }
-    .brand-model {
-      font-family: Gotham Pro;
-      font-size: 27px;
-      line-height: 39px;
-      color: #252525;
-    }
+  }
+
+  .buyer-info {
+    margin: 30px 0;
+  }
+
+  .category-name {
+    font-family: Helvetica Neue;
+    font-size: 16px;
+    line-height: 27px;
+    color: #3A3A3A;
+    opacity: 0.3;
+  }
+  .brand-model {
+    font-family: Gotham Pro;
+    font-size: 27px;
+    line-height: 39px;
+    color: #252525;
+  }
 }
 
 @media (max-width: 1199px) {
