--- a/src/scss/pages/rent-gear-detail.scss
+++ b/src/scss/pages/rent-gear-detail.scss
@@ -320,8 +320,10 @@
     width: 85px;
   }
   .carousel-image-container {
+    height: 100%;
     img {
-      width: 100%;
+      width: 80px;
+      height: 80px;
     }
   }
 }
