payin handle network error

--- a/src/scss/pages/addgear.scss
+++ b/src/scss/pages/addgear.scss
@@ -170,6 +170,7 @@
       display: inline-block;
       border-radius: 30px;
       margin-right: 5px;
+      cursor: pointer;
 
       &.active {
         color: white;
