--- a/src/scss/pages/dashboard/order-history.scss
+++ b/src/scss/pages/dashboard/order-history.scss
@@ -48,6 +48,9 @@
             line-height: 28px;
             font-weight: 600;
           }
+          .buyer-info-left .grey-small-text {
+            margin-bottom: 8px;
+          }
         }
         .payment-info {
           .duration {
