--- a/src/scss/index.scss
+++ b/src/scss/index.scss
@@ -40,6 +40,7 @@
 @import 'pages/FAQ';
 @import 'pages/favourites';
 @import 'pages/editgear';
+@import 'pages/privacy-policy';
 @import 'components/cart-modal';
 @import 'components/empty_activity';
 @import 'components/customspinner';
