--- a/src/scss/pages/checkout.scss
+++ b/src/scss/pages/checkout.scss
@@ -11,7 +11,7 @@
     color: #252525;
   }
   .billing-address, .order-info {
-    border: 30px solid #f4f5f6;
+    border: 30px solid #faf8f9;
 
     .checkout-header, .address-select {
       display: flex;
@@ -158,17 +158,21 @@
 }
 .select-addr-btn ~ div, .select-card-btn ~ div {
   border: none;
-  width: 270%;
+  max-width: 290px;
+  overflow: hidden;
 }
 .project-name-container {
-  border: 30px solid #f4f5f6;
+  border: 30px solid #faf8f9;
   width: 100%;
   padding: 28px;
   margin-bottom: 30px;
 }
 
-@media (max-width: 1199px) {
+@media (max-width: 1077px) {
   .checkout {
+    .project-name-container {
+      border: 18px solid #FAF8F9;
+    }
     .checkout-title {
       justify-content: center;
     }
@@ -177,6 +181,9 @@
       border-width: 18px;
       .checkout-header, .address-select {
         padding: 25px 38px;
+      }
+      .sidebar {
+        width: 100%;
       }
     }
     .order-info {
@@ -203,7 +210,7 @@
       }
     }
     .theme-form {
-      padding: 20px 30px 20px;
+      padding: 20px 16px 20px !important;
     }
     .bottom-buttons {
       width: 100%;
@@ -220,54 +227,70 @@
 }
 
 @media (max-width: 767px) {
-  .order-info {
-    width: 100%;
-
-    .order-info-header {
-      padding: 20px 30px !important;
-      font-family: Gotham Pro;
-      font-size: 14px;
-      line-height: 23px;
-      letter-spacing: 0.09em;
-      text-transform: uppercase;
-      color: #AAAAAA;
-    }
-    .btn-edit-order {
-      padding: 0 !important;
-      min-width: 80px !important;
-    }
-    .order-info-body {
-      padding: 0 !important;
-    }
-    .checkout-items {
-      margin: 0;
+  .checkout {
+    .project-name-container {
+      width: 100%;
+      padding: 10px;
       border-bottom: none !important;
+      margin-bottom: 0;
+    }
+    .address-info-wrapper .flex-row {
+      display: block !important;
+    }
+    .billing-address {
+      .checkout-header, .address-select {
+        padding: 25px 16px;
+      }
+      .order-info {
+        width: 100%;
 
-      .checkout-item {
-        display: block;
-        padding: 15px 30px !important;
-        border-bottom: 1px solid #EAEAEA !important;
+        .order-info-header {
+          padding: 20px 30px !important;
+          font-family: Gotham Pro;
+          font-size: 14px;
+          line-height: 23px;
+          letter-spacing: 0.09em;
+          text-transform: uppercase;
+          color: #AAAAAA;
+        }
+        .btn-edit-order {
+          padding: 0 !important;
+          min-width: 80px !important;
+        }
+        .order-info-body {
+          padding: 0 !important;
+        }
+        .checkout-items {
+          margin: 0;
+          border-bottom: none !important;
+
+          .checkout-item {
+            display: block;
+            padding: 15px 30px !important;
+            border-bottom: 1px solid #EAEAEA !important;
+          }
+        }
+        .checkout-total {
+          padding: 15px 30px !important;
+          border-top: none;
+        }
+        .checkout-amount {
+          padding: 15px 30px !important;
+          margin: 0;
+        }
+      }
+      .btn-edit-order-bottom {
+        padding: 0 !important;
+      }
+      .footer-bottom {
+        display: block !important;
+      }
+      .mobile-bottom-margin {
+        display: none !important;
+      }
+      .addr-dropdown {
+        position: unset;
       }
     }
-    .checkout-total {
-      padding: 15px 30px !important;
-      border-top: none;
-    }
-    .checkout-amount {
-      padding: 15px 30px !important;
-      margin: 0;
-    }
-  }
-  .btn-edit-order-bottom {
-    padding: 0 !important;
-  }
-  .footer-bottom {
-    display: block !important;
-  }
-  .mobile-bottom-margin {
-    display: none !important;
-  }
-  .addr-dropdown {
-    position: unset;
   }
 }
