--- a/src/scss/components/footer.scss
+++ b/src/scss/components/footer.scss
@@ -1,6 +1,6 @@
 footer {
   .news-letter {
-    background-color: #F8F8F8;
+    background-color: #faf8f9;
     padding-bottom: 2rem !important;
   }
   .news-letter-container {
