--- a/src/scss/pages/FAQ.scss
+++ b/src/scss/pages/FAQ.scss
@@ -7,12 +7,12 @@
       display: inline-flex;
     }
   }
-
   .FAQ-body {
     margin-bottom: 100px;
 
     .accordion {
       border: none;
+      margin-bottom: 40px;
 
       .accordion__item {
         border: none;
@@ -35,6 +35,100 @@
           p {
             color: #6a6a6a;
           }
+        }
+      }
+    }
+
+    .faq-form-wrapper {
+      padding: 96px 113px;
+      display: block;
+      background: #FAF8F9;
+
+      & > div:last-child {
+        padding: 0 15px;
+      }
+      h2, h6 {
+        text-align: center;
+        margin: 0 auto 1.5rem;
+      }
+      h6 {
+        color: #f82462;
+        margin-bottom: 3rem;
+      }
+      button {
+        width: 100%;
+        margin-top: 1.5rem;
+      }
+      label {
+        margin-left: 15px;
+        color: #252525;
+        opacity: 0.8;
+      }
+      input {
+        padding-left: 15px;
+      }
+      .custom-beautiful-textfield {
+        width: 100%;
+        margin-bottom: 22px;
+
+        &:last-child {
+          margin: 0;
+        }
+      }
+      .category_description_ta {
+        width: 100%;
+        height: 100%;
+        border: 1px solid #E5E3E4;
+        padding-top: 25px;
+
+        textarea {
+          height: 100%;
+        }
+      }
+    }
+  }
+}
+
+@media (max-width: 1077px) {
+  .FAQ-body {
+    .faq-form-wrapper {
+      padding: 3rem !important;
+
+      div > div {
+        padding: 0;
+      }
+      .custom-beautiful-textfield {
+        input {
+          text-align: left;
+        }
+      }
+    }
+  }
+}
+
+@media (max-width: 767px) {
+  .FAQ-body {
+    .faq-form-wrapper {
+      padding: 2rem 1rem !important;
+
+      h2 {
+        font-size: 27px;
+      }
+      h2, h6 {
+        text-align: left !important;
+      }
+      div > div {
+        padding: 0;
+      }
+      & > div:last-child {
+        padding: 0;
+      }
+      .category_description_ta {
+        margin-top: 1rem;
+      }
+      .custom-beautiful-textfield {
+        input {
+          text-align: left;
         }
       }
     }
