--- a/src/scss/pages/about.scss
+++ b/src/scss/pages/about.scss
@@ -62,6 +62,9 @@
       }
     }
 
+    span.thin {
+      font-weight: normal;
+    }
     h1 {
       color: $white;
       margin-bottom: 2rem;
@@ -83,9 +86,11 @@
     p.about-desc {
       width: 80%;
       padding: 0;
-      letter-spacing: 1px;
-      line-height: 24px;
+      font-family: Helvetica Neue;
+      font-style: normal;
+      font-weight: normal;
       font-size: 16px;
+      line-height: 27px;
     }
 
     .about-cm {
