--- a/src/scss/pages/home.scss
+++ b/src/scss/pages/home.scss
@@ -586,6 +586,7 @@
   padding: 0;
   width: 100%;
   height: 721px;
+  overflow: hidden;
 
   .faq-background-img {
     width: 45%;
@@ -709,7 +710,6 @@
     display: flex;
     width: 100%;
     height: 721px;
-    overflow: hidden;
     z-index: 2;
 
     .arrival-items-inner-wrapper {
@@ -859,18 +859,16 @@
         z-index: 1;
       }
     }
+  }
 
-    .arrival-items-glow {
-      position: absolute;
-      right: 0;
-      top: 0;
-      width: 285px;
-      height: 100%;
-
-      background: linear-gradient(270deg, #fff 0%, #fff 20%, rgba(255, 255, 255, 0) 100%);
-      z-index: 3;
-      pointer-events: none;
-    }
+  .arrival-items-glow {
+    position: absolute;
+    right: 0;
+    width: 27%;
+    height: 100%;
+    background: linear-gradient(to right, rgba(255,255,255,0) 0%,rgba(255,255,255,0.85) 32%,rgba(255,255,255,1) 100%);
+    z-index: 3;
+    pointer-events: none;
   }
 }
 
