--- a/src/scss/pages/FAQ.scss
+++ b/src/scss/pages/FAQ.scss
@@ -121,7 +121,7 @@
         padding: 0;
       }
       & > div:last-child {
-        padding: 0;
+        padding: 0 !important;
       }
       .category_description_ta {
         margin-top: 1rem;
