--- a/src/scss/pages/register.scss
+++ b/src/scss/pages/register.scss
@@ -153,6 +153,37 @@
   padding-top: 15px;
 }
 
+.term-view-container {
+  .input_svg {
+    width: 21px !important;
+    height: 21px !important;
+    margin-top: 15px;
+    margin-right: 10px;
+
+    img {
+      width: 23px !important;
+      height: 21px !important;
+      margin: 3px 0 0;
+    }
+    input {
+      margin-left: 0 !important;
+    }
+  }
+  .checkbox-label {
+    margin-left: 0 !important;
+    .term-view-btn {
+      color: #f82462;
+      text-decoration: underline;
+      cursor: pointer;
+    }
+  }
+}
+
+.privacy-modal {
+  max-width: 1150px !important;
+  text-align: left !important;
+}
+
 @media(max-width: 1077px) {
   .login.success-message {
     height: 70vh;
