--- a/src/scss/pages/privacy-policy.scss
+++ b/src/scss/pages/privacy-policy.scss
@@ -1,9 +1,11 @@
 .privacy-policy-body {
   font-size: 20px;
   line-height: 1.7;
+
   ul {
     margin-left: 25px;
     list-style: disc;
+    margin-bottom: 15px;
 
     li {
       font-size: 20px !important;
@@ -33,8 +35,10 @@
 .terms-conditions-body {
   font-size: 20px;
   line-height: 1.7;
+
   ul {
     margin-left: 25px;
+    margin-bottom: 15px;
     list-style: none;
 
     li {
