--- a/src/scss/pages/addgear.scss
+++ b/src/scss/pages/addgear.scss
@@ -339,11 +339,9 @@
       padding: 15px 0;
     }
     .success_first_button {
-      padding:0;
       width: 45%;
     }
     .success_sencond_button {
-      padding:0;
       width: 45%;
     }
     .theme-text-small {
@@ -608,14 +606,11 @@
       padding: 15px 0;
     }
     .success_first_button {
-      padding:0;
       width: 45%;
     }
     .success_sencond_button {
-      padding:0;
       width: 45%;
     }
-
 
     & > * {
       margin-top: 10px;
@@ -949,11 +944,11 @@
     .buttons-container {
       display: block;
       .success_first_button {
-        padding:0;
+        padding: 5px;
         width: 100%;
       }
       .success_sencond_button {
-        padding:0;
+        padding: 5px;
         margin: 0 !important;
         margin-top: 10px!important;
         width: 100%;
