--- a/src/scss/pages/rent-gear-detail.scss
+++ b/src/scss/pages/rent-gear-detail.scss
@@ -321,6 +321,8 @@
   }
   .carousel-image-container {
     height: 100%;
+    cursor: pointer;
+
     img {
       width: 80px;
       height: 80px;
