--- a/src/scss/bootstrap4.1.3/_carousel.scss
+++ b/src/scss/bootstrap4.1.3/_carousel.scss
@@ -121,6 +121,7 @@
   color: $carousel-control-color;
   text-align: center;
   opacity: $carousel-control-opacity;
+  font-size: 25px;
   // We can't have a transition here because WebKit cancels the carousel
   // animation if you trip this while in the middle of another animation.
 
