--- a/src/scss/components/custom-carousel.scss
+++ b/src/scss/components/custom-carousel.scss
@@ -13,9 +13,9 @@
   .carousel-image-container {
     height: 100%;
     text-align: center;
-    img {
-      width: 80px;
-      height: 80px;
-    }
+    //img {
+    //  width: 80px;
+    //  height: 80px;
+    //}
   }
 }
