--- a/src/scss/common.scss
+++ b/src/scss/common.scss
@@ -181,21 +181,27 @@ img {
   margin-right:7px;
   margin-left:7px !important;
 }
+
 .notification-message {
   h4 {
-    color:white;
+    color: white;
     font-size: 24px;
   }
 }
-.notification-error {
-  background-color: #ea4d5e;
-}
+
 .notification-container {
   width: 40vw;
-}
-.notification {
-  border:1px solid white;
-  border-radius: 19px;
+  top: 130px;
+
+  .notification-error {
+    background-color: #f82462;
+    opacity: 1;
+    border: none;
+  }
+  .notification-info {
+    opacity: 0.9;
+    border: none;
+  }
 }
 
 .breadcrumb-item {
